--- a/package.json
+++ b/package.json
@@ -28,6 +28,8 @@
     "@zxing/library": "^0.19.1",
     "@zxing/ngx-scanner": "^3.6.2",
     "bootstrap": "^5.1.3",
+    "express": "^4.18.2",
+    "mercadopago": "^1.5.14",
     "ngx-bootstrap-icons": "^1.9.1",
     "ngx-cookie-service": "^14.0.1",
     "ngx-toastr": "^15.0.0",
